--- a/frontend/public/static/css/style.css
+++ b/frontend/public/static/css/style.css
@@ -14,6 +14,7 @@ body {
     border: none;
     color: #444;
     position: relative;
+    
 }
 
 h1,
@@ -285,7 +286,7 @@ input[type="color"]:focus,
     left: 10%;
     text-align: center;
 }
-
+ 
 .overlay {
     background: rgba(0, 0, 0, 0.4) url("../images/pattern.png") repeat;
     position: absolute;
@@ -865,6 +866,7 @@ section {
     background-position: center 0;
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: url("../images/parallax/bg.jpg");
     width: 100%;
 }
 
